Fixed a bunch of references to

--- a/db/json2/digitalparticipation/templates/skill-up-detail.hbs
+++ b/db/json2/digitalparticipation/templates/skill-up-detail.hbs
@@ -22,19 +22,19 @@
     </div>
     <div class="mdc-layout-grid__inner expand detail">
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4">
-            {{#compare params.slug "===" "managing-information"}}
+            {{#compare request.params.slug "===" "managing-information"}}
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Managing-Info).png" alt="Managing Info illustration" class="responsive-img margin-top" />
             {{else}}
-            {{#compare params.slug "===" "communicating"}}
+            {{#compare request.params.slug "===" "communicating"}}
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Communicating).png" alt="Communicating illustration" class="responsive-img margin-top" />
             {{else}}
-            {{#compare params.slug "===" "transacting"}}
+            {{#compare request.params.slug "===" "transacting"}}
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Transacting).png" alt="Transacting illustration" class="responsive-img margin-top" />
             {{else}}
-            {{#compare params.slug "===" "problem-solving"}}
+            {{#compare request.params.slug "===" "problem-solving"}}
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Problem-Solving).png" alt="Problem Solving illustration" class="responsive-img margin-top" />
             {{else}}
-            {{#compare params.slug "===" "creating"}}
+            {{#compare request.params.slug "===" "creating"}}
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Creating).png" alt="Creating illustration" class="responsive-img margin-top" />
             {{else}}
             {{/compare}}
@@ -54,7 +54,7 @@
                     </a>
                 </h3>
             </div>
-            {{#compare params.slug "===" "managing-information"}}
+            {{#compare request.params.slug "===" "managing-information"}}
             <h3><span class="number">1</span> Managing Info</h3>
             <ul materialize="mdc-layout-grid__celllapsible" class="mdc-layout-grid__celllapsible" data-collapsible="accordion">
                 <li class="active">
@@ -71,7 +71,7 @@
                 </li>
             </ul>
             {{else}}
-            {{#compare params.slug "===" "communicating"}}
+            {{#compare request.params.slug "===" "communicating"}}
             <h3><span class="number">2</span> Communicating</h3>
             <ul materialize="mdc-layout-grid__celllapsible" class="mdc-layout-grid__celllapsible" data-collapsible="accordion">
                 <li class="active">
@@ -88,7 +88,7 @@
                 </li>
             </ul>
             {{else}}
-            {{#compare params.slug "===" "transacting"}}
+            {{#compare request.params.slug "===" "transacting"}}
             <h3><span class="number">3</span> Transacting</h3>
             <ul materialize="mdc-layout-grid__celllapsible" class="mdc-layout-grid__celllapsible" data-collapsible="accordion">
                 <li class="active">
@@ -105,7 +105,7 @@
                 </li>
             </ul>
             {{else}}
-            {{#compare params.slug "===" "problem-solving"}}
+            {{#compare request.params.slug "===" "problem-solving"}}
             <h3><span class="number">4</span> Problem Solving</h3>
             <ul materialize="mdc-layout-grid__celllapsible" class="mdc-layout-grid__celllapsible" data-collapsible="accordion">
                 <li class="active">
@@ -122,7 +122,7 @@
                 </li>
             </ul>
             {{else}}
-            {{#compare params.slug "===" "creating"}}
+            {{#compare request.params.slug "===" "creating"}}
             <h3><span class="number">5</span> Creating</h3>
             <ul materialize="mdc-layout-grid__celllapsible" class="mdc-layout-grid__celllapsible" data-collapsible="accordion">
                 <li class="active">
