--- a/db/json2/scvo/partials/handle-404.hbs
+++ b/db/json2/scvo/partials/handle-404.hbs
@@ -39,7 +39,7 @@
     <script>
         gtag('event', '404', {
             event_category: '{{name}}',
-            event_label: '{{params.uri.pathname}}'
+            event_label: '{{request.params.uri.pathname}}'
         });
     </script>
 {{/if ~}}
