--- a/db/json2/digitalparticipation/templates/resources-detail.hbs
+++ b/db/json2/digitalparticipation/templates/resources-detail.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    {{#compare params.slug "===" "help-others"}}
+    {{#compare request.params.slug "===" "help-others"}}
     <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
@@ -28,7 +28,7 @@
     </div>
 
     {{else}}
-    {{#compare params.slug "===" "logos"}}
+    {{#compare request.params.slug "===" "logos"}}
     <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
@@ -59,7 +59,7 @@
     </div>
 
     {{else}}
-    {{#compare params.slug "===" "reports"}}
+    {{#compare request.params.slug "===" "reports"}}
     <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
@@ -209,7 +209,7 @@
     </div>
 
     {{else}}
-    {{#compare params.slug "===" "support"}}
+    {{#compare request.params.slug "===" "support"}}
     <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
