--- a/db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -7,7 +7,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <h4>Search</h4>
                     <div class="mdc-textfield mdc-textfield--upgraded keywords">
-                        <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{params.query.q}}" placeholder="Search for a charter signatory" autofocus>
+                        <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{request.params.query.q}}" placeholder="Search for a charter signatory" autofocus>
                         <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                             <span class="far fa-2x fa-search" aria-hidden="true"></span>
                         </button>
@@ -17,9 +17,9 @@
                     <h4>Sector</h4>
                     <div class="mdc-form-field sector">
                         <select class="mdc-select" role="listbox" id="charter-sector" name="sector" data-clear-input="#charter-category">
-                            <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>All sectors</option>
+                            <option value="" {{#if request.params.query.sector}}{{else}}selected{{/if}}>All sectors</option>
                             {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets}}
-                            <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
+                            <option value="{{key}}" {{#compare ../request.params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
                             {{/each}}
                         </select>
                     </div>
@@ -28,9 +28,9 @@
                     <h4>Category</h4>
                     <div class="mdc-form-field category">
                         <select class="mdc-select" role="listbox" id="charter-category" name="category">
-                            <option value="" {{#if params.query.category}}{{else}}selected{{/if}}>All categories</option>
+                            <option value="" {{#if request.params.query.category}}{{else}}selected{{/if}}>All categories</option>
                             {{#each data.supplimentaryResponses.categories.aggregations.categories.buckets}}
-                            <option value="{{key}}" {{#compare ../params.query.category "===" key}}selected{{/compare}}>{{key}}</option>
+                            <option value="{{key}}" {{#compare ../request.params.query.category "===" key}}selected{{/compare}}>{{key}}</option>
                             {{/each}}
                         </select>
                     </div>
@@ -46,8 +46,8 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-3-phone">
                     <div class="mdc-form-field sort">
                         <select class="mdc-select" role="listbox" id="charter-sort" name="sort">
-                            <option value="" {{#if params.query.sort}}{{else}}selected{{/if}}>Date signed</option>
-                            <option value="AZ" {{#if params.query.sort}}selected{{else}}{{/if}}>Alphabetical</option>
+                            <option value="" {{#if request.params.query.sort}}{{else}}selected{{/if}}>Date signed</option>
+                            <option value="AZ" {{#if request.params.query.sort}}selected{{else}}{{/if}}>Alphabetical</option>
                         </select>
                     </div>
                 </div>
