--- a/db/json2/digitalparticipation/templates/stories-detail.hbs
+++ b/db/json2/digitalparticipation/templates/stories-detail.hbs
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner detail">
-        {{#compare params.slug "===" "cre8te-opportunites"}}
+        {{#compare request.params.slug "===" "cre8te-opportunites"}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
             <h3>“Giving people the skills they are expected to have automatically by the welfare system enables them to meet Jobcentre expectations &amp; help avoid the possibility of sanctions, which are having a major impact on people living in poverty”</h3>
             <p>&#8212; <strong><a href="/signatories/cre8te-opportunities-limited">Cre8te Opportunities Limited</a></strong></p>
@@ -31,7 +31,7 @@
             <hr class="margin-top" />
         </div>
         {{else}}
-        {{#compare params.slug "===" "glasgow-life"}}
+        {{#compare request.params.slug "===" "glasgow-life"}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
             <h3>“Our frontline staff have the skills and knowledge to weave relevant digital learning elements into the work they are already doing with harder to reach groups”</h3>
             <p>&#8212; <strong><a href="/signatories/glasgow-life">Glasgow Life</a></strong></p>
@@ -54,7 +54,7 @@
             <hr class="margin-top" />
         </div>
         {{else}}
-        {{#compare params.slug "===" "queens-cross"}}
+        {{#compare request.params.slug "===" "queens-cross"}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
             <h3>“We worked to engage older people with the internet”</h3>
             <p>&#8212; <strong><a href="">Queens Cross Housing Association</a></strong></p>
