--- a/db/json2/scvo/templates/errors/500.hbs
+++ b/db/json2/scvo/templates/errors/500.hbs
@@ -26,7 +26,7 @@
         <script>
             gtag('event', '500', {
                 event_category: '{{name}}',
-                event_label: '{{params.uri.pathname}}'
+                event_label: '{{request.params.uri.pathname}}'
             });
         </script>
     </div>
