--- a/db/json2/scvo/templates/events/event-cjs-search.hbs
+++ b/db/json2/scvo/templates/events/event-cjs-search.hbs
@@ -31,15 +31,15 @@
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
                         <div class="mdc-textfield mdc-textfield--upgraded">
-                            <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
+                            <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
                         </div>
                         <h3>Filter</h3>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-locations" name="location">
-                                <option value="" {{#if params.query.location}}{{else}}selected{{/if}}>Any location</option>
+                                <option value="" {{#if request.params.query.location}}{{else}}selected{{/if}}>Any location</option>
                                 {{#each data.supplimentaryResponses.types.aggregations.locations.buckets ~}}
                                 {{#if key ~}}
-                                <option value="{{key}}" {{#compare ../params.query.location "===" key}}selected{{/compare}}>{{key}}</option>
+                                <option value="{{key}}" {{#compare ../request.params.query.location "===" key}}selected{{/compare}}>{{key}}</option>
                                 {{/if ~}}
                                 {{/each ~}}
                             </select>
