--- a/db/json2/scvo/templates/events/event-digital-search.hbs
+++ b/db/json2/scvo/templates/events/event-digital-search.hbs
@@ -31,33 +31,33 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
                     <form action="/digital/events" method="GET" [searchroute]="'event_digital_search'" data-auto-search="true">
                         <div class="mdc-textfield mdc-textfield--upgraded">
-                            <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
+                            <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
                         </div>
                         <h3>Filter</h3>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-course_type" name="course_type">
-                                <option value="" {{#if params.query.course_type}}{{else}}selected{{/if}}>Select event type</option>
+                                <option value="" {{#if request.params.query.course_type}}{{else}}selected{{/if}}>Select event type</option>
                                 {{#each data.supplimentaryResponses.types.aggregations.types.buckets ~}}
-                                <option value="{{key}}" {{#compare ../params.query.course_type "===" key}}selected{{/compare}}>{{key}}</option>
+                                <option value="{{key}}" {{#compare ../request.params.query.course_type "===" key}}selected{{/compare}}>{{key}}</option>
                                 {{/each ~}}
                             </select>
                         </div>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-month" name="month">
-                                <option value="" {{#if params.query.month}}{{else}}selected{{/if}}>Any month</option>
+                                <option value="" {{#if request.params.query.month}}{{else}}selected{{/if}}>Any month</option>
                                 {{#each data.supplimentaryResponses.types.aggregations.months.buckets ~}}
                                 {{#if key ~}}
-                                <option value="{{key}}" {{#compare ../params.query.month "===" key}}selected{{/compare}}>{{key}}</option>
+                                <option value="{{key}}" {{#compare ../request.params.query.month "===" key}}selected{{/compare}}>{{key}}</option>
                                 {{/if ~}}
                                 {{/each ~}}
                             </select>
                         </div>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-locations" name="location">
-                                <option value="" {{#if params.query.location}}{{else}}selected{{/if}}>Any location</option>
+                                <option value="" {{#if request.params.query.location}}{{else}}selected{{/if}}>Any location</option>
                                 {{#each data.supplimentaryResponses.types.aggregations.locations.buckets ~}}
                                 {{#if key ~}}
-                                <option value="{{key}}" {{#compare ../params.query.location "===" key}}selected{{/compare}}>{{key}}</option>
+                                <option value="{{key}}" {{#compare ../request.params.query.location "===" key}}selected{{/compare}}>{{key}}</option>
                                 {{/if ~}}
                                 {{/each ~}}
                             </select>
@@ -81,7 +81,7 @@
         {{else}}
         <h2>No results</h2>
         <p>
-            There are no upcoming events{{#if params.query.q ~}} for your search query{{/if ~}}. Please check back soon.
+            There are no upcoming events{{#if request.params.query.q ~}} for your search query{{/if ~}}. Please check back soon.
         </p>
         {{/compare}}
     </div>
