--- a/db/json2/scvo/templates/grants/grant-charter-search.hbs
+++ b/db/json2/scvo/templates/grants/grant-charter-search.hbs
@@ -37,7 +37,7 @@
                             <div class="mdc-layout-grid__inner">
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                                     <div class="mdc-textfield mdc-textfield--upgraded">
-                                        <input type="text" class="mdc-textfield__input searchRoute" name="q" id="grant-charter-keywords" value="{{params.query.q}}" placeholder="Search query">
+                                        <input type="text" class="mdc-textfield__input searchRoute" name="q" id="grant-charter-keywords" value="{{request.params.query.q}}" placeholder="Search query">
                                         <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                                             <span class="far fa-2x fa-search" aria-hidden="true"></span>
                                         </button>
@@ -45,17 +45,17 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                     <select class="mdc-select" role="listbox" id="grant-charter-call" name="call">
-                                        <option value="" {{#if params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
+                                        <option value="" {{#if request.params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
                                         {{#each data.supplimentaryResponses.types.aggregations.calls.buckets ~}}
-                                        <option value="{{slugify key}}" {{#compare ../params.query.call "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
+                                        <option value="{{slugify key}}" {{#compare ../request.params.query.call "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                                         {{/each ~}}
                                     </select>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                     <select class="mdc-select" role="listbox" id="grant-charter-tag" name="tag">
-                                        <option value="" {{#if params.query.tag}}{{else}}selected{{/if}}>All tags</option>
+                                        <option value="" {{#if request.params.query.tag}}{{else}}selected{{/if}}>All tags</option>
                                         {{#each data.supplimentaryResponses.types.aggregations.tags.buckets ~}}
-                                        <option value="{{slugify key}}" {{#compare ../params.query.tag "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
+                                        <option value="{{slugify key}}" {{#compare ../request.params.query.tag "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                                         {{/each ~}}
                                     </select>
                                 </div>
