--- a/db/json2/scvo/templates/jobs/cjs-job.hbs
+++ b/db/json2/scvo/templates/jobs/cjs-job.hbs
@@ -6,7 +6,7 @@
             <li><a href="/jobs">Jobs</a></li>
             <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
             <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
-            <li><a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}">Search</a></li>
+            <li><a href="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}">Search</a></li>
             <li>{{data.primaryResponse.hits.hits.[0]._source.title}}</li>
         </ul>
         <div class="mdc-layout-grid">
