--- a/db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -12,7 +12,7 @@
                             <h3>Find a job in the third sector</h3>
                             <form action="/jobs/search" method="GET" [searchroute]="'goodmoves_job_search'" class="search_form" data-auto-search="true">
                                 <div class="mdc-textfield mdc-textfield--upgraded">
-                                    <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{params.query.q}}">
+                                    <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
                                     <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                                         <span class="far fa-2x fa-search" aria-hidden="true"></span>
                                     </button>
