--- a/db/json2/scvo/templates/staff/staff-search.hbs
+++ b/db/json2/scvo/templates/staff/staff-search.hbs
@@ -35,9 +35,9 @@
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                     <div class="mdc-form-field">
                                         <select class="mdc-select" role="listbox" id="department" name="department" onchange="this.form.submit();">
-                                            <option value="" {{#if params.query.department}}{{else}}selected{{/if}}>All departments</option>
+                                            <option value="" {{#if request.params.query.department}}{{else}}selected{{/if}}>All departments</option>
                                             {{#each data.supplimentaryResponses.departments.aggregations.departments.buckets ~}}
-                                            <option value="{{slugify key}}" {{#compare ../params.query.department "===" (slugify key)}}selected{{/compare}}>{{key}}</option>
+                                            <option value="{{slugify key}}" {{#compare ../request.params.query.department "===" (slugify key)}}selected{{/compare}}>{{key}}</option>
                                             {{/each ~}}
                                         </select>
                                     </div>
@@ -45,9 +45,9 @@
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                     <div class="mdc-form-field">
                                         <select class="mdc-select" role="listbox" id="city" name="city" onchange="this.form.submit();">
-                                            <option value="" {{#if params.query.city}}{{else}}selected{{/if}}>All cities</option>
+                                            <option value="" {{#if request.params.query.city}}{{else}}selected{{/if}}>All cities</option>
                                             {{#each data.supplimentaryResponses.departments.aggregations.cities.buckets ~}}
-                                            <option value="{{slugify key}}" {{#compare ../params.query.city "===" (slugify key)}}selected{{/compare}}>{{key}}</option>
+                                            <option value="{{slugify key}}" {{#compare ../request.params.query.city "===" (slugify key)}}selected{{/compare}}>{{key}}</option>
                                             {{/each ~}}
                                         </select>
                                     </div>
