--- a/appengine/test-db/json2/scvo/partials/menu-charity-awards.hbs
+++ b/appengine/test-db/json2/scvo/partials/menu-charity-awards.hbs
@@ -41,10 +41,11 @@
             <a href="http://www.sgn.co.uk" target="_blank" class="sponsor" title="SGN"  style="background-image:url('https://goodhq.org/images/charityawards/logos/sgn-logo-200x200.png');"></a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <a href="http://cldstandardscouncil.org.uk" target="_blank" class="sponsor" title="CLD Standards Council Scotland" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/cld_logo.jpg');"></a>
+            <a href="http://cldstandardscouncil.org.uk" target="_blank" class="sponsor" title="CLD Standards Council Scotland" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/cld_logo.jpg'); background-size: 75%; background-repeat: no-repeat;"></a>
         </div>
     </div>
 </div>
 <p>
+    <br />
     <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SPONSORSHIP-OFFER.pdf" download>Become a sponsor</a> (PDF)
 </p>
