--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1,7 +1,6 @@
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
 @import url('//fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600');
 
-
 $unit: 1rem;
 $nav-height: 38px;
 
@@ -673,6 +672,7 @@ primary-dark: #251032
 .services.goodmoves {
     @include theme-colours('goodmoves');
 }
+.scottish-charity-awards .book-your-place,
 .project,
 .campaign,
 .open-government,
