--- a/db/json2/scvo/partials/menu-charity-awards.hbs
+++ b/db/json2/scvo/partials/menu-charity-awards.hbs
@@ -41,7 +41,7 @@
             <a href="http://www.sgn.co.uk" target="_blank" class="sponsor" title="SGN"  style="background-image:url('https://goodhq.org/images/charityawards/logos/sgn-logo-200x200.png');"></a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <a href="http://cldstandardscouncil.org.uk" target="_blank" class="sponsor" title="CLD Standards Council Scotland" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/cld_logo.jpg');"></a>
+            <a href="http://cldstandardscouncil.org.uk" target="_blank" class="sponsor" title="CLD Standards Council Scotland" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/cld_logo.jpg'); background-size: 80%; background-repeat: no-repeat;"></a>
         </div>
     </div>
 </div>
