--- a/db/json2/scvo/partials/menu-about.hbs
+++ b/db/json2/scvo/partials/menu-about.hbs
@@ -1,17 +1,1 @@
-<nav class="menu-sidebar" id="about-menu">
-    {{#each context.menus.about ~}}
-    <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-5 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-</nav>
+{{>sidebar_menu items=context.menus.about path=request.url.pathname id="about-menu"}}
