--- a/db/json2/scvo/partials/menu-running-legislation.hbs
+++ b/db/json2/scvo/partials/menu-running-legislation.hbs
@@ -1,19 +1,3 @@
-<nav class="menu-sidebar" id="running-legislation-menu">
-    {{#each context.menus.running-legislation ~}}
-    <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-5 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-</nav>
+{{>sidebar_menu items=context.menus.running-legislation path=request.url.pathname id="running-legislation-menu"}}
 
 {{> sidebar_running}}
