--- a/db/json2/scvo/partials/menu-services-membership.hbs
+++ b/db/json2/scvo/partials/menu-services-membership.hbs
@@ -1,17 +1,1 @@
-<nav class="menu-sidebar" id="services-membership-menu">
-    {{#each context.menus.services-membership ~}}
-    <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children ~}}
-    <a class="menu-level-5 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-    {{/each ~}}
-</nav>
+{{>sidebar_menu items=context.menus.services-membership path=request.url.pathname id="running-services-membership-menu"}}
