--- a/db/json2/digitalparticipation/layouts/default.hbs
+++ b/db/json2/digitalparticipation/layouts/default.hbs
@@ -54,7 +54,7 @@
                             <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
                                 <nav id="main-tab-bar" class="mdc-tab-bar" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.mdc-tab--label'" [menuactiveclass]="'active'">
                                     {{#each context.menus.main}}
-                                    <a class="mdc-tab{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
+                                    <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
                                     {{/each}}
                                 </nav>
                                 <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="window.drawer.open = true">
@@ -75,7 +75,7 @@
                         <nav class="mdc-temporary-drawer__content mdc-list-group">
                             <div id="icon-with-text-demo" class="mdc-list" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.menu-label'" [menuactiveclass]="'active'">
                                 {{#each context.menus.main}}
-                                <a class="mdc-list-item{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"
+                                <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}"
                                     data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
                                     <span class="menu-label">{{{label}}}</span>
                                 </a>
