More goodmoves work

--- a/db/json2/goodmoves/templates/jobs/search.hbs
+++ b/db/json2/goodmoves/templates/jobs/search.hbs
@@ -70,7 +70,7 @@
                     {{> search_info}}
 
                     {{#each data.primaryResponse.hits.hits ~}}
-                    {{{_source.rendered.goodmoves_search_result}}}
+                    {{{_source.rendered.search_result}}}
                     {{/each ~}}
 
                     {{> pagination paging=data.primaryResponse.pagination}}
