--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -168,7 +168,8 @@ input:focus:-ms-input-placeholder {
     }
 }
 
-img.responsive {
+img.responsive,
+img.responsive-img {
     max-width: 100%;
 }
 
