Updated search info

--- a/db/json2/scvo/templates/events/event-cjs-search.hbs
+++ b/db/json2/scvo/templates/events/event-cjs-search.hbs
@@ -65,7 +65,7 @@
                             Below are some examples of courses which can be accessed to utilise CJS employees training fund and training provider website links.
                         </p>
 
-                        {{> search_info}}
+                        {{> search_info paging=data.primaryResponse.pagination}}
 
                         {{#each data.primaryResponse.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
