--- a/db/json2/scvo/templates/main_search/search.hbs
+++ b/db/json2/scvo/templates/main_search/search.hbs
@@ -32,7 +32,7 @@
                             </div>
                         </div>
 
-                        {{> search_info}}
+                        {{> search_info paging=data.primaryResponse.pagination}}
 
                         {{#each data.primaryResponse.hits.hits ~}}
                         {{>highlight_result}}
