--- a/db/json2/scvo/templates/members/member-search.hbs
+++ b/db/json2/scvo/templates/members/member-search.hbs
@@ -54,7 +54,7 @@
                         </div>
 
                         {{#if request.params.query.q ~}}
-                        {{> search_info}}
+                        {{> search_info paging=data.primaryResponse.pagination}}
                         {{else}}
                         <h3>Our members include&hellip;</h3>
                         {{/if ~}}
