--- a/db/json2/scvo/templates/documents/evidence-library-document-search.hbs
+++ b/db/json2/scvo/templates/documents/evidence-library-document-search.hbs
@@ -29,7 +29,7 @@
                     {{> sidebar_library_search}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content library-content">
-                    {{> search_info}}
+                    {{> search_info paging=data.primaryResponse.pagination}}
 
                     {{#each data.primaryResponse.hits.hits ~}}
                     {{{_source.rendered.scvo_list}}}
