--- a/db/json2/scvo/templates/events/event-policy-search.hbs
+++ b/db/json2/scvo/templates/events/event-policy-search.hbs
@@ -80,7 +80,7 @@
                     </form>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content event-content">
-                    {{> search_info}}
+                    {{> search_info paging=data.primaryResponse.pagination}}
 
                     {{#each data.primaryResponse.hits.hits ~}}
                     {{{_source.rendered.scvo_list}}}
