--- a/db/json2/scvo/templates/grants/grant-cyber-search.hbs
+++ b/db/json2/scvo/templates/grants/grant-cyber-search.hbs
@@ -32,7 +32,7 @@
 
                     <hr />
 
-                    <!-- {{> search_info}} -->
+                    <!-- {{> search_info paging=data.primaryResponse.pagination}} -->
 
                     <div class="mdc-layout-grid equal-height v-margin">
                         <div class="mdc-layout-grid__inner">
