--- a/db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -39,7 +39,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
                     {{#ifAny request.params.query.q request.params.query.job_number request.params.query.location request.params.query.sector request.params.query.region ~}}
                     {{#if data.primaryResponse.hits.total ~}}
-                    {{> search_info}}
+                    {{> search_info paging=data.primaryResponse.pagination}}
 
                     {{#each data.primaryResponse.hits.hits ~}}
                     {{{_source.rendered.scvo_list}}}
