--- a/db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -91,7 +91,7 @@
                     </form>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
-                    {{> search_info}}
+                    {{> search_info paging=data.primaryResponse.pagination}}
 
                     {{#each data.primaryResponse.hits.hits ~}}
                     {{{_source.rendered.scvo_search_result}}}
