--- a/db/json2/scvo/templates/pages/page-blogs.hbs
+++ b/db/json2/scvo/templates/pages/page-blogs.hbs
@@ -23,7 +23,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content post-content">
                     {{#compare data.primaryResponse.hits.total ">" 0 ~}}
-                    {{> search_info}}
+                    {{> search_info paging=data.primaryResponse.pagination}}
                     <ul class="supplimentary-list">
                         {{#each data.primaryResponse.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
