--- a/db/json2/scvo/templates/trustees/trustee-search.hbs
+++ b/db/json2/scvo/templates/trustees/trustee-search.hbs
@@ -34,7 +34,7 @@
                     {{{data.supplimentaryResponses.page.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content trustee-content">
-                    {{> search_info}}
+                    {{> search_info paging=data.primaryResponse.pagination}}
 
                     {{#each data.primaryResponse.hits.hits ~}}
                     {{{_source.rendered.trustee_search_result}}}
