Added deploy-db to deploy-app:

--- a/db/json2/scvo/templates/events/event-cjs.hbs
+++ b/db/json2/scvo/templates/events/event-cjs.hbs
@@ -13,17 +13,8 @@
 
         {{{rendered.scvo_full}}}
 
-        <!-- <div class="event-content">
-            {{#compare course_type "===" "Training Course" ~}}
-            <p>
-                <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
-            </p>
-            {{else}}
-            <p>
-                <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
-            </p>
-            {{/compare ~}}
-        </div> -->
+        {{{rendered.scvo_speakers}}}
+
         {{/with ~}}
 
         <div class="mdc-layout-grid related">
