--- a/db/json2/scvo/templates/events/event.hbs
+++ b/db/json2/scvo/templates/events/event.hbs
@@ -11,14 +11,8 @@
 
         {{{rendered.scvo_full}}}
 
-        <div class="event-content">
-            {{#compare course_type "===" "Training Course" ~}}
-            <p>
-                <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
-            </p>
-            {{else}}
-            {{/compare ~}}
-        </div>
+        {{{rendered.scvo_speakers}}}
+
         {{/with ~}}
 
         {{#compare data.supplimentaryResponses.related_events.hits.total ">" 0 ~}}
