--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1189,6 +1189,18 @@ section.search {
     }
 }
 
+.gallery-columns-5 {
+    clear: both;
+    .gallery-item {
+        width: 20%;
+        margin: 0 auto $unit;
+        float: left;
+        .gallery-icon {
+            text-align: center;
+        }
+    }
+}
+
 .home,
 .policy-research {
     .latest-content {
