--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2303,6 +2303,7 @@ body.i-love-charity .page-info,
     font-weight: 600;
 }
 .mdc-button {
+    display: inline-table;
     line-height: 1.96rem;
     outline: none;
 }
